--- a/style.css
+++ b/style.css
@@ -27,6 +27,15 @@ body{
   -webkit-overflow-scrolling:auto;
 }
 
+select {
+  width: 100%;
+  padding: 10px;
+  margin-top: 6px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+
 /* ---------- CARD ---------- */
 .app-container{
   width:100%;
